styles/Gallery.module.css
.main {
  /* width: 90%;
  height: auto; */
  /* margin: 0 auto; */
  display: flex;
  justify-content: center;
  padding: 2rem 0;
  height: 100%;
  min-height: 100vh;
}

.container {
  display: flex;
  /* justify-content: space-around; */
  justify-content: center;
  flex-wrap: wrap;
  gap: 20px;
  width: 100%;
  margin: 0 auto;
}

.image {
  width: 400px;
  height: 400px;
  position: relative;
}

.image > img {
  object-fit: contain;
}

